# phos

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ETHEREUM.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  build.rs  flake.nix
.claude/: settings.local.json
benches/: colorize.rs
examples/: config.yaml  program-myapp.yaml  theme-custom.yaml  theme-override.yaml
scripts/: preview-themes.sh  test-pty-compat.sh  update-aur.sh  update-docs.sh  update-homebrew.sh
src/: category.rs  colorizer.rs  colors.rs  config.rs  lib.rs  main.rs  pty.rs  rule.rs  shell.rs  stats.rs  theme.rs
src/aggregator/: dappnode_provider.rs  discovery.rs  docker_provider.rs  html.rs  http_provider.rs  mod.rs  provider.rs  socketio_provider.rs  streamer.rs  web.rs
src/alert/: condition.rs  config.rs  discord.rs  evaluator.rs  formatter.rs  mod.rs  rate_limit.rs  sender.rs  telegram.rs
src/clients/: mod.rs
src/commands/: colors.rs  completions.rs  config.rs  info.rs  interactive.rs  list.rs  man.rs  mod.rs  preview.rs  run.rs  shell_init.rs  themes.rs
src/program/: config.rs  loader.rs  mod.rs
src/programs/: common.rs  mod.rs
src/programs/ci/: github_actions.rs  jenkins.rs  mod.rs
src/programs/common/: containers.rs  database.rs  development.rs  identifiers.rs  lifecycle.rs  log_levels.rs  metrics.rs  mod.rs  network.rs  time.rs
src/programs/data/: elasticsearch.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs
src/programs/dev/: build.rs  lang.rs  mod.rs  node.rs  rust.rs  vcs.rs
src/programs/devops/: ansible.rs  aws.rs  docker.rs  docker_compose.rs  helm.rs  k9s.rs  kubectl.rs  mod.rs  terraform.rs
src/programs/ethereum/: clients.rs  macros.rs  mod.rs  patterns.rs
src/programs/messaging/: kafka.rs  mod.rs  rabbitmq.rs
src/programs/monitoring/: datadog.rs  grafana.rs  mod.rs  prometheus.rs  signoz.rs
src/programs/network/: diagnostics.rs  interfaces.rs  mod.rs  servers.rs  sockets.rs  tools.rs
src/programs/network/diagnostics/: mod.rs  mtr.rs  ntpdate.rs  tcpdump.rs  whois.rs
src/programs/network/servers/: apache.rs  caddy.rs  haproxy.rs  mod.rs  nginx.rs  traefik.rs
src/programs/system/: core.rs  files.rs  hardware.rs  mod.rs  packages.rs  processes.rs  security.rs
src/stats/: collector.rs  core.rs  export.rs  helpers.rs  mod.rs  patterns.rs
tests/: cli.rs  consistency.rs  integration.rs  property_tests.proptest-regressions  property_tests.rs
