[package]
name = "phoscat"
version = "0.4.2"
edition = "2024"
authors = ["DROO <droo@axol.io>"]
description = "High-performance universal log colorizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hydepwns/phos"
keywords = ["ethereum", "logs", "colorizer", "terminal", "web3"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "phos"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
clap_mangen = "0.2"
atty = "0.2"

# Colors
nu-ansi-term = "0.50"

# Regex
regex = "1.10"
once_cell = "1.19"

# Performance
smallvec = "1.13"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Directories
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async HTTP for webhooks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }

# Aggregator dependencies (for phos-aggregator binary)
bollard = "0.18"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
ansi-to-html = "0.2"
async-stream = "0.3"
futures = "0.3"

# WAMP/WebSocket for DAppNode integration
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Socket.IO for modern DAppNode integration
rust_socketio = { version = "0.6", features = ["async"] }

# Vendored OpenSSL for musl/static builds (required by rust_socketio)
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "phos"
path = "src/main.rs"

[[bin]]
name = "phoscat"
path = "src/bin/phoscat.rs"

[[bin]]
name = "phos-aggregator"
path = "src/bin/phos-aggregator.rs"

[[bench]]
name = "colorize"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
